infra/api-gateway/deploy/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http-admin
